test/errors/functions/params_ref_error.hy
// EXPECT_OUTPUT: cannot be declared as ref
int bad(params ref int[] values)
{
    return 0
}
